[Aryan] Add: Implemented getAll wishlists API along with swagger implementation and rspec testing as well
