# public/api-docs/v1/swagger.yaml
@@ -263,7 +263,7 @@ paths:
       tags:
         - Wishlists
       security:
-        - BearerAuth: []  # Ensures the request requires authentication
+        - BearerAuth: []  
       parameters:
         - in: header
           name: Authorization
@@ -315,6 +315,74 @@ paths:
                   errors:
                     type: string
                     example: "Unauthorized"
+
+  /api/v1/wishlists/getAll:
+   get:
+     summary: Get All Wishlist Items
+     description: Retrieves all books in the authenticated user's wishlist.
+     tags:
+       - Wishlists
+     security:
+       - BearerAuth: []  
+     parameters:
+       - in: header
+         name: Authorization
+         required: true
+         description: Bearer token for authentication
+         schema:
+           type: string
+           example: "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+     responses:
+       "200":
+         description: Wishlist retrieved successfully
+         content:
+           application/json:
+             schema:
+               type: object
+               properties:
+                 wishlist:
+                   type: array
+                   items:
+                     type: object
+                     properties:
+                       id:
+                         type: integer
+                         example: 1
+                       book_id:
+                         type: integer
+                         example: 456
+                       book_name:
+                         type: string
+                         example: "The Great Gatsby"
+                       author:
+                         type: string
+                         example: "F. Scott Fitzgerald"
+                       genre:
+                         type: string
+                         example: "Fiction"
+                       book_image:
+                         type: string
+                         example: "great_gatsby.jpg"
+       "401":
+         description: Unauthorized - Token missing or invalid
+         content:
+           application/json:
+             schema:
+               type: object
+               properties:
+                 error:
+                   type: string
+                   example: "Unauthorized"
+       "404":
+         description: User not found or no wishlist items
+         content:
+           application/json:
+             schema:
+               type: object
+               properties:
+                 error:
+                   type: string
+                   example: "Wishlist is EMPTY"
 
 components:
   securitySchemes:
